--- a/style.css
+++ b/style.css
@@ -56,19 +56,76 @@ section {
 }
 
 button {
-    background: linear-gradient(10deg, #F7E93F 0%, #FB09B4 51%, #9100F8 100%);
     font-size: 16px;
     font-weight: 600;
-    padding: 12px 16px;
-    color: white;
     border: none;
     border-radius: 2rem;
 }
 
-.hamburger-menu{
+.btn {
+    padding: 12px 16px;
+    color: white;
+    background: linear-gradient(10deg, #F7E93F 0%, #FB09B4 51%, #9100F8 100%);
+}
+
+.hamburger-menu {
     display: none;
 }
 
+.hero-container {
+    /* background-color: #1A0B2E; */
+    width: 100%;
+    padding: 40px 20px;
+    background-image: url("./assets/hero-bg.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.hero-content {
+    /* border: 2px solid red; */
+    width: 38%;
+    text-align: center;
+    margin: 0px auto;
+    padding: 101px 0px;
+}
+
+.mic-box {
+    width: 21rem;
+    box-shadow: 0px 0px 0px 10px rgba(255, 255, 255, 0.1);
+    height: 21rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    margin: 0px auto 40px;
+}
+
+.hero-content h1 {
+    font-size: 3.25rem;
+    margin-bottom: 8px;
+    font-weight: 900;
+}
+
+.hero-content p {
+    color: gray;
+    font-size: 1rem;
+    margin-bottom: 1.5rem;
+}
+
+.hero-buttons {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.snd-button {
+    background-color: transparent;
+    border: 1px solid #00FF88;
+    color: #00FF88;
+    padding: 10px 16px;
+}
 
 @media screen and (max-width: 576px) {
     .nav-header {
@@ -83,7 +140,21 @@ button {
         display: none;
     }
 
-    .hamburger-menu{
+    .hamburger-menu {
         display: flex;
+    }
+
+    .hero-content {
+        margin: 0px;
+        width: 100%;
+    }
+
+    .mic-box {
+        width: 12rem;
+        height: 12rem;
+    }
+
+    .mic-box img {
+        width: 3.5rem;
     }
 }
