--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ section {
     margin: 0px auto;
     max-width: 1600px;
     /* border: 2px solid black; */
+    padding-top: 24px;
 }
 
 .navbar {
@@ -77,7 +78,6 @@ button {
     width: 100%;
     padding: 40px 20px;
     background-image: url("./assets/hero-bg.png");
-    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -91,9 +91,9 @@ button {
 }
 
 .mic-box {
-    width: 21rem;
+    width: 25rem;
     box-shadow: 0px 0px 0px 10px rgba(255, 255, 255, 0.1);
-    height: 21rem;
+    height: 25rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -128,6 +128,10 @@ button {
 }
 
 @media screen and (max-width: 576px) {
+    .section {
+        padding-top: 20px;
+    }
+
     .nav-header {
         font-size: 2rem;
     }
