Adding About section

--- a/style.css
+++ b/style.css
@@ -21,9 +21,16 @@
     font-weight: bold;
 }
 
+.bg-color-2 {
+    background-color: #1A0B2E;
+}
+
 section {
     width: 100%;
-    background-color: #1A0B2E;
+}
+
+.frst-section {
+    border-bottom: 2px solid #402f40;
 }
 
 .section {
@@ -31,13 +38,13 @@ section {
     margin: 0px auto;
     max-width: 1600px;
     /* border: 2px solid black; */
-    padding-top: 24px;
 }
 
 .navbar {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 10px 0px 10px;
 }
 
 .nav-header {
@@ -54,6 +61,14 @@ section {
     color: white;
     text-decoration: none;
     font-size: 16px;
+    padding: 5px 18px;
+    border-radius: 2rem;
+    /* border: 2px solid; */
+    transition: 0.3s;
+}
+
+.navbar ul li a:hover {
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 button {
@@ -66,8 +81,19 @@ button {
 .btn {
     padding: 12px 16px;
     color: white;
+    overflow: hidden;
     background: linear-gradient(10deg, #F7E93F 0%, #FB09B4 51%, #9100F8 100%);
+    transition: 0.3s;
+    cursor: pointer;
 }
+
+.btn:hover,
+.gradiant-color:hover {
+    filter: hue-rotate(23deg);
+    scale: 1.05;
+}
+
+
 
 .hamburger-menu {
     display: none;
@@ -91,14 +117,18 @@ button {
 }
 
 .mic-box {
-    width: 25rem;
+    width: 21rem;
     box-shadow: 0px 0px 0px 10px rgba(255, 255, 255, 0.1);
-    height: 25rem;
+    height: 21rem;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
     margin: 0px auto 40px;
+}
+
+.mic-box img {
+    width: 32%;
 }
 
 .hero-content h1 {
@@ -125,13 +155,69 @@ button {
     border: 1px solid #00FF88;
     color: #00FF88;
     padding: 10px 16px;
+    transition: 0.3s;
 }
 
-@media screen and (max-width: 576px) {
-    .section {
-        padding-top: 20px;
-    }
+.snd-button:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    scale: 1.05;
 
+}
+
+
+.about {
+    padding: 100px 0px;
+    background-color: #1A0B2E;
+}
+
+
+.about-container {
+    margin: 0px auto;
+    text-align: center;
+    /* border: 2px solid; */
+    width: 100%;
+}
+
+.about-container h1 {
+    font-size: 3rem;
+    margin-bottom: 6px;
+}
+
+.about-container p {
+    line-height: 26px;
+    font-size: 16px;
+}
+
+.width-1200 {
+    max-width: 1200px;
+    margin: 0px auto;
+    width: 75%;
+}
+
+.hr {
+    margin: 5rem 0rem 5rem;
+    border: 1px solid #8080801c;
+}
+
+.card-box {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center
+}
+
+.card h1 {
+    color: #00FF88;
+    font-size: 48px;
+    margin-bottom: 1rem;
+}
+
+.card p {
+    font-size: 16px;
+    line-height: 20px;
+}
+
+
+@media screen and (max-width: 576px) {
     .nav-header {
         font-size: 2rem;
     }
@@ -160,5 +246,22 @@ button {
 
     .mic-box img {
         width: 3.5rem;
+    }
+
+    .about{
+        padding: 0px;
+    }
+
+    .width-1200{
+        width: 90%;
+    }
+
+    .hr{
+        margin: 2rem 0px;
+    }
+
+    .card-box{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 5rem;
     }
 }
