--- a/style.css
+++ b/style.css
@@ -216,6 +216,56 @@ button {
     line-height: 20px;
 }
 
+.trd-section {
+    background-color: #230E3D;
+    width: 100%;
+    margin: 0px auto;
+}
+
+.trd-container {
+    margin: 0px auto;
+    width: 75%;
+    max-width: 1600px;
+    padding-top: 120px;
+}
+
+.feature-header {
+    text-align: center;
+    margin-bottom: 5rem;
+    font-size: 3rem;
+}
+
+.grid-cards {
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 250px 250px 250px;
+    grid-template-areas: "box-1 box-2 box-2"
+        "box-1 box-3 box-3"
+        "box-4 box-4 box-5"
+
+}
+
+.grid-card {
+    background-color: rgba(255, 255, 255, 0.03);
+    border-radius: 2rem;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.grid-card h2 {
+    font-size: 1.5rem;
+    margin: 1.2rem 0px;
+}
+
+.grid-card p {
+    font-size: 18px;
+    line-height: 1.8rem;
+}
+
 
 @media screen and (max-width: 576px) {
     .nav-header {
@@ -248,28 +298,53 @@ button {
         width: 3.5rem;
     }
 
-    .about{
+    .about {
         padding: 0px;
     }
 
-    .width-1200{
+    .width-1200 {
         width: 90%;
     }
 
-    .hr{
+    .hr {
         margin: 2rem 0px;
     }
 
-    .card-box{
-        grid-template-columns: repeat(2, 1fr);
+    .card-box {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: auto;
         gap: 5rem;
     }
 
-    .card{
+    .card {
         text-align: center;
     }
 
-    .card h1{
+    .card h1 {
         font-size: 40px;
+    }
+
+    .trd-container {
+        width: 90%;
+    }
+
+    .grid-cards {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: 350px 450px 350px;
+        grid-template-areas: "box-1"
+            "box-2"
+            "box-3"
+            "box-4"
+            "box-5"
+    }
+
+
+    .grid-card h2 {
+        font-size: 22px;
+    }
+
+    .grid-card p {
+        font-size: 16px;
+        line-height: 1.8rem;
     }
 }
