--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ section {
 
 .navbar ul li a:hover {
     background-color: rgba(255, 255, 255, 0.1);
+    font-size: 1.05rem;
+    color: rgba(255, 255, 255, 0.561);
 }
 
 button {
@@ -254,6 +256,11 @@ button {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    transition: 0.3s;
+}
+
+.grid-card:hover {
+    background-color: rgba(255, 255, 255, 0.07);
 }
 
 .grid-card h2 {
