--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@
 
 .bg-color-2 {
     background-color: #1A0B2E;
+    width: 100%;
+    margin: 0px auto;
 }
 
 section {
@@ -244,7 +246,8 @@ button {
     grid-template-rows: 250px 250px 250px;
     grid-template-areas: "box-1 box-2 box-2"
         "box-1 box-3 box-3"
-        "box-4 box-4 box-5"
+        "box-4 box-4 box-5";
+    padding-bottom: 120px;
 
 }
 
@@ -271,6 +274,86 @@ button {
 .grid-card p {
     font-size: 18px;
     line-height: 1.8rem;
+}
+
+
+.feature-episodes {
+    text-align: center;
+    font-size: 3rem;
+    padding: 5rem 0;
+}
+
+.margin-auto {
+    margin: 0px auto;
+}
+
+.w-75 {
+    width: 75%;
+    margin: 0px auto;
+}
+
+.video-card {
+    /* border: 2px solid red; */
+    border-radius: 2rem;
+    overflow: hidden;
+    width: 35rem;
+    height: 34rem;
+    background-color: rgba(255, 255, 255, 0.03);
+}
+
+.video-card iframe {
+    border-radius: 3rem 3rem 0px 0px;
+}
+
+.video-header {
+    font-size: 1.5rem;
+    margin: 1.2rem 0px;
+
+}
+
+.video-p {
+    font-size: 18px;
+    line-height: 1.8rem;
+    margin-bottom: 12px;
+}
+
+.video-timing {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
+
+.padding-24px {
+    padding: 24px;
+}
+
+.episode-card {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1.8rem;
+}
+
+.host-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.8rem;
+    padding: 2.4rem;
+    /* border: 2px solid red; */
+    border-radius: 2rem;
+    background-color: rgba(255, 255, 255, 0.03);
+
+}
+
+.host-info h2 {
+    font-size: 2rem;
+    margin-bottom: 16px;
+}
+
+.host-info p {
+    line-height: 24px;
 }
 
 
@@ -327,7 +410,7 @@ button {
         font-size: 40px;
     }
 
-    .trd-container {
+    .trd-container, .w-75 {
         width: 90%;
     }
 
@@ -341,7 +424,6 @@ button {
             "box-5"
     }
 
-
     .grid-card h2 {
         font-size: 22px;
     }
@@ -349,5 +431,24 @@ button {
     .grid-card p {
         font-size: 16px;
         line-height: 1.8rem;
+    }
+
+    .episode-card{
+        flex-direction: column;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+    .video-card{
+        width: 100%;
+        height: 30rem;
+    }
+    iframe{
+        width: 100%;
+        height: 18vh;
+        margin-top: 10px;
+    }
+
+    .host-box{
+        flex-direction: column;
     }
 }
