Finish responsiveness of host section

--- a/style.css
+++ b/style.css
@@ -483,4 +483,8 @@ button {
     .host-box {
         flex-direction: column;
     }
+
+    .social-icon{
+        justify-content: center;
+    }
 }
