--- a/style.css
+++ b/style.css
@@ -132,6 +132,14 @@ button {
     text-align: center;
     margin: 0px auto;
     padding: 101px 0px;
+    position: relative;
+}
+
+.new {
+    position: relative;
+    width: 21rem;
+    /* border: 2px solid red; */
+    margin: 0px auto;
 }
 
 .mic-box {
@@ -450,6 +458,44 @@ footer::before {
     color: rgb(154, 154, 154);
 }
 
+/* Animations */
+
+.hero-upr-div {
+    position: absolute;
+    top: 1.5rem;
+    right: 1rem;
+    background-color: #00FF88;
+    border-radius: 2rem;
+    width: 75px;
+    z-index: 10;
+    padding: 8px 16px;
+    box-shadow: 0px 0px 15px rgba(0, 255, 136, 0.5);
+    animation: updownLoop 2s infinite ease-in-out;
+}
+
+.hero-upr-div h6 {
+    font-size: 18px;
+    color: black;
+    font-weight: 900;
+}
+
+
+@keyframes updownLoop {
+    0% {
+        transform: translateY(0px);
+    }
+
+    50% {
+        transform: translateY(-10px);
+        /* ৫-১০ পিক্সেল উপরে উঠবে */
+    }
+
+    100% {
+        transform: translateY(0px);
+        /* আবার আগের জায়গায় ফিরে আসবে */
+    }
+}
+
 @media screen and (max-width: 576px) {
     .nav-header {
         font-size: 2rem;
@@ -552,7 +598,7 @@ footer::before {
         justify-content: center;
     }
 
-    .text-center{
+    .text-center {
         width: 100%;
     }
 
@@ -560,7 +606,24 @@ footer::before {
         font-size: 3rem;
     }
 
-    .flex-2{
+    .flex-2 {
         flex-wrap: wrap;
+    }
+
+    .hero-upr-div {
+        position: absolute;
+        top: 0.2rem;
+        right: 4.5rem;
+        width: 60px;
+        background-color: #00FF88;
+        border-radius: 20px;
+        z-index: 100;
+        text-align: center;
+    }
+
+    .hero-upr-div h6 {
+        font-size: 12px;
+        margin: 5px 0;
+        color: #000;
     }
 }
