--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ section {
 }
 
 .navbar ul li a:hover {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.3);
     font-size: 1.05rem;
     color: rgba(255, 255, 255, 0.561);
 }
@@ -252,6 +252,21 @@ button {
     font-size: 48px;
 }
 
+.card {
+    padding: 30px 20px;
+    border-radius: 1.5rem;
+    transition: 0.3s;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.card:hover {
+    background: #ffffff29;
+}
+
 .card h1 {
     color: #00FF88;
     font-size: 48px;
@@ -306,7 +321,7 @@ button {
 }
 
 .grid-card:hover {
-    background-color: rgba(255, 255, 255, 0.07);
+    background-color: rgba(255, 255, 255, 0.08);
 }
 
 .grid-card h2 {
@@ -343,6 +358,11 @@ button {
     width: 35rem;
     height: 34rem;
     background-color: rgba(255, 255, 255, 0.03);
+    transition: 0.3s;
+}
+
+.video-card:hover {
+    background-color: rgba(255, 255, 255, 0.08);
 }
 
 .video-card iframe {
@@ -613,7 +633,7 @@ footer::before {
     .hero-upr-div {
         position: absolute;
         top: 0.2rem;
-        right: 4.5rem;
+        right: 3.5rem;
         width: 60px;
         background-color: #00FF88;
         border-radius: 20px;
@@ -625,5 +645,9 @@ footer::before {
         font-size: 12px;
         margin: 5px 0;
         color: #000;
+    }
+
+    .new{
+        width: 100%;
     }
 }
