--- a/style.css
+++ b/style.css
@@ -446,7 +446,7 @@ button {
 footer {
     position: relative;
     overflow: hidden;
-    padding: 85px 0px;
+    padding: 4rem 0rem 4rem;
 }
 
 footer::before {
@@ -454,7 +454,7 @@ footer::before {
     width: 100%;
     height: 100%;
     background-image: url("./assets/footer-bg.png");
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     position: absolute;
     top: 0;
