--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ button {
     width: 100%;
     height: 100%;
     background-image: url("./assets/hero-bg.png");
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     position: absolute;
     top: 0;
@@ -356,7 +356,7 @@ button {
     border-radius: 2rem;
     overflow: hidden;
     width: 35rem;
-    height: 34rem;
+    height: 38rem;
     background-color: rgba(255, 255, 255, 0.03);
     transition: 0.3s;
 }
@@ -366,12 +366,12 @@ button {
 }
 
 .video-card iframe {
-    border-radius: 3rem 3rem 0px 0px;
+    border-radius: 2rem 2rem 0px 0px;
 }
 
 .video-header {
-    font-size: 1.5rem;
-    margin: 1.2rem 0px;
+    font-size: 2rem;
+    margin: 1rem 0px;
 
 }
 
@@ -601,13 +601,16 @@ footer::before {
 
     .video-card {
         width: 100%;
-        height: 30rem;
+        height: 40rem;
+    }
+
+    .padding-24px{
+        padding: 0px 16px;
     }
 
     iframe {
         width: 100%;
-        height: 39%;
-        margin-top: 10px;
+        /* margin-top: 10px; */
     }
 
     .host-box {
@@ -647,7 +650,8 @@ footer::before {
         color: #000;
     }
 
-    .new{
+    .new {
         width: 100%;
+        margin-top: 3rem;
     }
 }
