--- a/style.css
+++ b/style.css
@@ -355,6 +355,10 @@ a{
     margin: 0px auto;
 }
 
+#w-74{
+    padding-bottom: 0px;
+}
+
 .w-75 {
     width: 75%;
     margin: 0px auto;
@@ -514,7 +518,7 @@ footer::before {
     width: 75px;
     z-index: 10;
     padding: 8px 16px;
-    box-shadow: 0px 0px 15px rgba(0, 255, 136, 0.5);
+    box-shadow: 0px 0px 15px 2px rgba(0, 255, 136, 0.5);
     animation: updownLoop 2s infinite ease-in-out;
 }
 
